[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-utils"
version = "0.1.0"
description = "Utility helpers including centralized logging for remote APIs"
readme = "README.md"
authors = [{name = "GSC"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
]

[project.urls]
Homepage = "https://example.com/python-utils"
Repository = "https://example.com/python-utils.git"

[tool.setuptools.packages.find]
where = ["."]
